fix scrollbar showing on chrome

--- a/app/home/home.css
+++ b/app/home/home.css
@@ -3,3 +3,7 @@ html {
 	scrollbar-width: none;
 	@apply snap-y snap-mandatory;
 }
+
+html::-webkit-scrollbar {
+	display: none;
+}
